fixed NodeJs Icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
             </div>
             <div class="skill-row">
-                <img class="node-icon" src="images/Node.js_logo.svg" alt="nodejs-icon">
+                <img class="node-icon" src="images/nodejs.png" alt="nodejs-icon">
                 <h3>NodeJs Ninja</h3>
                 <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis
                     mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
