--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img class="main-bear-lake" src="images/mainPic3.jpg" alt="cloud-img">
         <div class="text-block">
             <h1 class="black-font">Hi, I'm Priyanka.</h1>
-            <h2 class="subtitle, black-font">a JavaScript Full Stack Developer</h2>
+            <h2 class="subtitle, black-font">A JavaScript Full Stack Developer</h2>
         </div>
     </div>
 
